# keystone-app-template

./: .gitignore  CMakeLists.txt  README.md  macros.cmake  setup_runtime.sh
host/: main.cpp
